<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rv_radius3">


    <TextView
        android:id="@+id/text_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Anderson"
        android:textSize="16dp"
        android:layout_margin="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="2423  3581  9803  2412"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_Name"
        app:layout_constraintStart_toStartOf="@+id/text_Name" />

    <TextView
        android:id="@+id/text_rv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_card_name"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_margin="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="21/ 24"
        android:textColor="@color/white"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_Card"
        app:layout_constraintEnd_toEndOf="@+id/text_rv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_price"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/text_Price"
        app:layout_constraintStart_toStartOf="@+id/text_Price"/>

    <TextView
        android:id="@+id/text_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$3,100.30"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_margin="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_visa"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_Price"
        app:layout_constraintEnd_toEndOf="@+id/text_Date" />

</androidx.constraintlayout.widget.ConstraintLayout>